updated business day logic

--- a/Assignment_5.11442.ipynb
+++ b/Assignment_5.11442.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -87,6 +87,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -164,7 +177,7 @@
        "9  4  2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -186,6 +199,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -255,33 +281,81 @@
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>88</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    X  Y\n",
-       "0   1  1\n",
-       "1   7  2\n",
-       "2   2  3\n",
-       "3   0  0\n",
-       "4   3  1\n",
-       "5   4  2\n",
-       "6   2  3\n",
-       "7   3  4\n",
-       "8   5  5\n",
-       "9   0  0\n",
-       "10  3  1\n",
-       "11  4  2"
+       "     X  Y\n",
+       "0    1  1\n",
+       "1    7  2\n",
+       "2    2  3\n",
+       "3    0  0\n",
+       "4    3  1\n",
+       "5    4  2\n",
+       "6    2  3\n",
+       "7    3  4\n",
+       "8    5  5\n",
+       "9    0  0\n",
+       "10   3  1\n",
+       "11   4  2\n",
+       "12   0  0\n",
+       "13   1  1\n",
+       "14   4  2\n",
+       "15   0  0\n",
+       "16   5  1\n",
+       "17   6  2\n",
+       "18  88  3\n",
+       "19   0  0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frame2 = pd.DataFrame({'X': [1,7, 2, 0, 3, 4, 2, 3, 5, 0, 3, 4]})\n",
+    "frame2 = pd.DataFrame({'X': [1,7, 2, 0, 3, 4, 2, 3, 5, 0, 3, 4,0,1,4,0,5,6,88,0]})\n",
     "frame_out2=complex(frame2)\n",
     "frame_out2"
    ]
@@ -295,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -341,6 +415,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -424,7 +511,7 @@
        "10  4  2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,18 +533,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "myindex=pd.date_range('1/1/2015','31/12/2015')"
+    "myindex=pd.bdate_range('1/1/2015','31/12/2015')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-01-01', '2015-01-02', '2015-01-05', '2015-01-06',\n",
+       "               '2015-01-07', '2015-01-08', '2015-01-09', '2015-01-12',\n",
+       "               '2015-01-13', '2015-01-14',\n",
+       "               ...\n",
+       "               '2015-12-18', '2015-12-21', '2015-12-22', '2015-12-23',\n",
+       "               '2015-12-24', '2015-12-25', '2015-12-28', '2015-12-29',\n",
+       "               '2015-12-30', '2015-12-31'],\n",
+       "              dtype='datetime64[ns]', length=261, freq='B')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -465,13 +581,13 @@
    "source": [
     "import random\n",
     "mydata=[]\n",
-    "for i in range(1,366):\n",
+    "for i in range(1,262):\n",
     "    mydata.append(random.randint(1,101))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -489,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -497,10 +613,10 @@
     {
      "data": {
       "text/plain": [
-       "2698"
+       "2819"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -526,22 +642,22 @@
     {
      "data": {
       "text/plain": [
-       "1     49.548387\n",
-       "2     48.321429\n",
-       "3     41.354839\n",
-       "4     43.000000\n",
-       "5     39.290323\n",
-       "6     35.766667\n",
-       "7     54.258065\n",
-       "8     54.000000\n",
-       "9     54.100000\n",
-       "10    55.290323\n",
-       "11    47.966667\n",
-       "12    47.419355\n",
+       "1     57.090909\n",
+       "2     52.900000\n",
+       "3     50.909091\n",
+       "4     56.818182\n",
+       "5     43.809524\n",
+       "6     43.909091\n",
+       "7     56.000000\n",
+       "8     56.285714\n",
+       "9     48.954545\n",
+       "10    53.045455\n",
+       "11    45.904762\n",
+       "12    59.130435\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -568,13 +684,13 @@
      "data": {
       "text/plain": [
        "2015-01-31    101\n",
-       "2015-05-31    101\n",
-       "2015-09-30     97\n",
-       "2016-01-31    100\n",
+       "2015-05-31    100\n",
+       "2015-09-30    101\n",
+       "2016-01-31    101\n",
        "Freq: 4M, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,6 +698,15 @@
    "source": [
     "s.groupby(pd.TimeGrouper('4M')).max()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
